--- a/privacy.html
+++ b/privacy.html
@@ -457,6 +457,7 @@
         <div class="contact-info" id="contact">
             <h2>11. Contact Us</h2>
             <p><strong>Website:</strong> <a href="https://chiphealth.ca" style="color: white;">chiphealth.ca</a></p>
+            <p><strong>Email:</strong> <a href="mailto:naoldenko@outlook.com" style="color: white;">naoldenko@outlook.com</a></p>
         </div>
     </div>
 
