--- a/privacy.html
+++ b/privacy.html
@@ -202,7 +202,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">chip health</div>
+            <div class="logo">chip</div>
             <div class="subtitle">Privacy Policy</div>
         </div>
 
@@ -218,8 +218,8 @@
                 <li><a href="#how-we-use">3. How We Use Your Information</a></li>
                 <li><a href="#data-storage">4. Data Storage and Security</a></li>
                 <li><a href="#data-sharing">5. Data Sharing and Disclosure</a></li>
-                <li><a href="#your-rights">6. Your Rights and Choices</a></li>
-                <li><a href="#third-party">7. Third-Party Services</a></li>
+                <li><a href="#third-party">6. Third-Party Services</a></li>
+                <li><a href="#your-rights">7. Your Rights and Choices</a></li>
                 <li><a href="#children">8. Children's Privacy</a></li>
                 <li><a href="#international">9. International Users</a></li>
                 <li><a href="#changes">10. Changes to This Policy</a></li>
@@ -229,14 +229,14 @@
 
         <div class="section" id="introduction">
             <h2>1. Introduction</h2>
-            <p>Welcome to chip health ("we," "our," or "us"). We are committed to protecting your privacy and ensuring
+            <p>Welcome to chip ("we," "our," or "us"). We are committed to protecting your privacy and ensuring
                 the security of your personal information. This Privacy Policy explains how we collect, use, disclose,
                 and safeguard your information when you use our mobile application and related services.</p>
 
             <div class="highlight-box">
-                <strong>Our Commitment:</strong> Your privacy is fundamental to our mission of providing safe, secure,
-                and personalized mental health support. We believe in transparency and giving you control over your
-                personal information.
+                <strong>Our Commitment:</strong> Your privacy is fundamental to our mission of providing a safe, secure,
+                founder-focused companion for entrepreneurs to use. We believe in transparency and giving you control
+                over your personal information.
             </div>
         </div>
 
@@ -252,8 +252,6 @@
             <h3>Health and Wellness Data</h3>
             <ul>
                 <li><strong>Mood Check-ins:</strong> Daily mood ratings (1-5 scale) and associated notes</li>
-                <li><strong>Journal Entries:</strong> Personal reflections and thoughts you choose to share</li>
-                <li><strong>AI-Generated Insights:</strong> Wellness insights generated from your journal entries</li>
                 <li><strong>Community Posts:</strong> Posts you share in community categories (gratitude, reflection,
                     growth)</li>
                 <li><strong>Community Interactions:</strong> Replies and responses to community posts</li>
@@ -270,9 +268,9 @@
 
             <h3>Third-Party Services</h3>
             <ul>
-                <li><strong>Firebase Services:</strong> Authentication, database storage, analytics, and file storage
-                </li>
-                <li><strong>OpenAI API:</strong> AI-powered insights and content moderation</li>
+                <li><strong>Firebase Services:</strong> Authentication, database storage, analytics, and file storage</li>
+                <li><strong>OpenAI API:</strong> AI-powered mood forecasting and content moderation</li>
+                <li><strong>Perplexity API:</strong> AI-powered search</li>
                 <li><strong>Google Fonts:</strong> Typography services</li>
             </ul>
         </div>
@@ -284,10 +282,8 @@
             <ul>
                 <li><strong>Account Management:</strong> Creating and managing your user account</li>
                 <li><strong>Mood Tracking:</strong> Storing and analyzing your daily mood check-ins</li>
-                <li><strong>Journal Features:</strong> Processing your journal entries and generating wellness insights
-                </li>
                 <li><strong>Community Features:</strong> Enabling social interactions and content sharing</li>
-                <li><strong>AI Coaching:</strong> Providing personalized mental health coaching and insights</li>
+                <li><strong>AI Advisor:</strong> Providing personalized entrepreneur-focused advice</li>
             </ul>
 
             <h3>Service Improvement</h3>
@@ -329,19 +325,11 @@
                 <li><strong>Encryption:</strong> All data is encrypted in transit and at rest</li>
                 <li><strong>Authentication:</strong> Secure login using Firebase Authentication</li>
                 <li><strong>Access Controls:</strong> Limited access to personal data by authorized personnel only</li>
-                <li><strong>Regular Security Audits:</strong> Ongoing security assessments and updates</li>
             </ul>
-
-            <div class="highlight-box">
-                <strong>Security First:</strong> We implement industry-standard security measures to protect your
-                sensitive health and personal information. Our security practices are regularly reviewed and updated to
-                address emerging threats.
-            </div>
         </div>
 
         <div class="section" id="data-sharing">
             <h2>5. Data Sharing and Disclosure</h2>
-
             <div class="highlight-box">
                 <strong>We Do Not Sell Your Data:</strong> We do not sell, rent, or trade your personal information to
                 third parties.
@@ -350,7 +338,8 @@
             <h3>Limited Sharing</h3>
             <p>We may share your information only in the following circumstances:</p>
             <ul>
-                <li><strong>Service Providers:</strong> With trusted third-party services (Firebase, OpenAI) that help
+                <li><strong>Service Providers:</strong> With trusted third-party services (Firebase, OpenAI, Perplexity)
+                    that help
                     us operate the app</li>
                 <li><strong>Legal Requirements:</strong> When required by law or to protect our rights and safety</li>
                 <li><strong>Business Transfers:</strong> In the event of a merger, acquisition, or sale of assets (with
@@ -362,36 +351,8 @@
                 (email, profile details) remains private.</p>
         </div>
 
-        <div class="section" id="your-rights">
-            <h2>6. Your Rights and Choices</h2>
-
-            <h3>Access and Control</h3>
-            <ul>
-                <li><strong>View Your Data:</strong> Access your mood check-ins, journal entries, and profile
-                    information</li>
-                <li><strong>Update Information:</strong> Modify your profile and account settings</li>
-                <li><strong>Delete Account:</strong> Permanently delete your account and all associated data</li>
-                <li><strong>Export Data:</strong> Request a copy of your personal data</li>
-            </ul>
-
-            <h3>Privacy Settings</h3>
-            <ul>
-                <li><strong>Profile Visibility:</strong> Control what information is visible to other users</li>
-                <li><strong>Analytics Opt-out:</strong> Disable analytics tracking (may affect app functionality)</li>
-                <li><strong>Community Participation:</strong> Choose whether to participate in community features</li>
-            </ul>
-
-            <h3>Data Retention</h3>
-            <ul>
-                <li><strong>Active Accounts:</strong> Data is retained while your account is active</li>
-                <li><strong>Deleted Accounts:</strong> All data is permanently deleted within 30 days of account
-                    deletion</li>
-                <li><strong>Inactive Accounts:</strong> Data may be deleted after extended periods of inactivity</li>
-            </ul>
-        </div>
-
         <div class="section" id="third-party">
-            <h2>7. Third-Party Services</h2>
+            <h2>6. Third-Party Services</h2>
 
             <h3>Firebase (Google)</h3>
             <ul>
@@ -404,9 +365,17 @@
             <h3>OpenAI</h3>
             <ul>
                 <li><strong>Purpose:</strong> AI-powered insights and content moderation</li>
-                <li><strong>Data Shared:</strong> Journal entries and community posts for processing</li>
+                <li><strong>Data Shared:</strong> Community posts for processing</li>
                 <li><strong>Privacy Policy:</strong> <a href="https://openai.com/privacy" target="_blank">OpenAI Privacy
                         Policy</a></li>
+            </ul>
+
+            <h3>Perplexity API</h3>
+            <ul>
+                <li><strong>Purpose:</strong> AI-powered search and content generation</li>
+                <li><strong>Data Shared:</strong> User queries and relevant context for processing</li>
+                <li><strong>Privacy Policy:</strong> <a href="https://www.perplexity.ai/privacy"
+                        target="_blank">Perplexity Privacy Policy</a></li>
             </ul>
 
             <h3>Google Fonts</h3>
@@ -418,6 +387,34 @@
             </ul>
         </div>
 
+        <div class="section" id="your-rights">
+            <h2>7. Your Rights and Choices</h2>
+
+            <h3>Access and Control</h3>
+            <ul>
+                <li><strong>View Your Data:</strong> You may access your mood check-ins, community posts, and profile information through the app.</li>
+                <li><strong>Update Information:</strong> You can modify your profile and account settings at any time.</li>
+                <li><strong>Delete Account:</strong> You may request permanent deletion of your account and all associated data by contacting us or using in-app features (if available).</li>
+                <li><strong>Export Data:</strong> You may request a copy of your personal data by contacting us at the email below.</li>
+            </ul>
+
+            <h3>Data Retention</h3>
+            <ul>
+                <li><strong>Active Accounts:</strong> Data is retained while your account is active.</li>
+                <li><strong>Deleted Accounts:</strong> All data is permanently deleted within 30 days of account deletion.</li>
+                <li><strong>Inactive Accounts:</strong> Data may be deleted after extended periods of inactivity.</li>
+            </ul>
+
+            <h3>International User Rights</h3>
+            <ul>
+                <li><strong>GDPR (EU):</strong> If you are located in the European Union, you have the right to access, rectify, erase, restrict, or object to processing of your data, request data portability, and lodge a complaint with a supervisory authority.</li>
+                <li><strong>CCPA (California):</strong> California residents have the right to know, access, delete, and opt out of the sale of their personal information.</li>
+            </ul>
+
+            <h3>Breach Notification</h3>
+            <p>If we become aware of a data breach that affects your personal information, we will notify you promptly in accordance with applicable laws.</p>
+        </div>
+
         <div class="section" id="children">
             <h2>8. Children's Privacy</h2>
             <p>Our app is not intended for children under 13 years of age. We do not knowingly collect personal
@@ -427,7 +424,8 @@
 
         <div class="section" id="international">
             <h2>9. International Users</h2>
-            <p>If you are using our app from outside the United States, please note that your information may be
+            <p>If you are using our app from outside Canada and the United States, please note that your information may
+                be
                 transferred to, stored, and processed in the United States where our servers are located. By using our
                 app, you consent to the transfer of your information to Canada and the United States.</p>
 
@@ -457,7 +455,8 @@
         <div class="contact-info" id="contact">
             <h2>11. Contact Us</h2>
             <p><strong>Website:</strong> <a href="https://chiphealth.ca" style="color: white;">chiphealth.ca</a></p>
-            <p><strong>Email:</strong> <a href="mailto:naoldenko@outlook.com" style="color: white;">naoldenko@outlook.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:naoldenko@outlook.com"
+                    style="color: white;">naoldenko@outlook.com</a></p>
         </div>
     </div>
 
