--- a/privacy.html
+++ b/privacy.html
@@ -270,7 +270,6 @@
             <ul>
                 <li><strong>Firebase Services:</strong> Authentication, database storage, analytics, and file storage</li>
                 <li><strong>OpenAI API:</strong> AI-powered mood forecasting and content moderation</li>
-                <li><strong>Perplexity API:</strong> AI-powered search</li>
                 <li><strong>Google Fonts:</strong> Typography services</li>
             </ul>
         </div>
@@ -283,7 +282,6 @@
                 <li><strong>Account Management:</strong> Creating and managing your user account</li>
                 <li><strong>Mood Tracking:</strong> Storing and analyzing your daily mood check-ins</li>
                 <li><strong>Community Features:</strong> Enabling social interactions and content sharing</li>
-                <li><strong>AI Advisor:</strong> Providing personalized entrepreneur-focused advice</li>
             </ul>
 
             <h3>Service Improvement</h3>
@@ -370,14 +368,6 @@
                         Policy</a></li>
             </ul>
 
-            <h3>Perplexity API</h3>
-            <ul>
-                <li><strong>Purpose:</strong> AI-powered search and content generation</li>
-                <li><strong>Data Shared:</strong> User queries and relevant context for processing</li>
-                <li><strong>Privacy Policy:</strong> <a href="https://www.perplexity.ai/privacy"
-                        target="_blank">Perplexity Privacy Policy</a></li>
-            </ul>
-
             <h3>Google Fonts</h3>
             <ul>
                 <li><strong>Purpose:</strong> Typography services</li>
@@ -393,7 +383,6 @@
             <h3>Access and Control</h3>
             <ul>
                 <li><strong>View Your Data:</strong> You may access your mood check-ins, community posts, and profile information through the app.</li>
-                <li><strong>Update Information:</strong> You can modify your profile and account settings at any time.</li>
                 <li><strong>Delete Account:</strong> You may request permanent deletion of your account and all associated data by contacting us or using in-app features (if available).</li>
                 <li><strong>Export Data:</strong> You may request a copy of your personal data by contacting us at the email below.</li>
             </ul>
@@ -426,7 +415,7 @@
             <h2>9. International Users</h2>
             <p>If you are using our app from outside Canada and the United States, please note that your information may
                 be
-                transferred to, stored, and processed in the United States where our servers are located. By using our
+                transferred to, stored, and processed in Canada and the United States where our servers are located. By using our
                 app, you consent to the transfer of your information to Canada and the United States.</p>
 
             <h3>Legal Basis for Processing (EU Users)</h3>
